@@ -3,6 +3,7 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - no longer calling a keyword's callback during traverse() if that
             keyword has an error
+          - better handling of blessed data types and other references
 
 0.514     2021-07-22 05:17:08Z
           - add_schema() now dies with the errors themselves, rather than an
